--- a/styles.css
+++ b/styles.css
@@ -6,27 +6,73 @@ h3{
     font-style: italic;
 }
 body, html {
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    height: 30%;
 
 }
 * {
     box-sizing: border-box;
 }
+.set {
+  padding-left: 30px; 
+}
+.image {
+  position: relative;
+  left: 600px;
+  bottom: 900px;
+
+}
 
 
 .bg-img {
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: initial;
-    position: relative;
+    /* Image used 
+    background-image: url(image.jpeg/gh-flag.jpeg);
+    /* Control the height of the image */
+  min-height: 50px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+ /* Add styles to the form container */
+.container {
+  position: absolute;
+  right: 0;
+  margin: 10px;
+  max-width: 50px;
+  padding: 10px;
+  background-color: beige;
 }
 
-.container {
-    position: absolute;
-    text-align: right;
-    color: rebeccapurple;
-}
+/* Full-width input fields */
+input[type=text], input[type=text] {
+    width: 20%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: rlywood;
+  }
+  input[type=text]:focus, input[type=text]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+  /* Set a style for the submit button */
+.btn-1 {
+    background-color: crimson;
+    color: white;
+    padding: 10px 10px;
+    border: 0;
+    cursor: pointer;
+    width: 5%;
+    opacity: o.9;
+    padding-right: 10px;
+  }
+
+.btn:hover {
+    opacity: 1;
+  }
+  
 .bottom-left {
     position: absolute;
     bottom: 8px;
@@ -38,29 +84,16 @@ body, html {
       
   }
 
-.btn {
-    background-color: #4caf50;
-    color: rgb(41, 24, 24);
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
-.btn:hover {
-    opacity: 1;
-}
-
 div {
-    background-color: burlywood;
+    background-color: ;
     padding-left: 0px;
 }
 
 .jumbotron {
-    background-color: #e3eafa;
-   padding: 0;
-   margin:0%;
-   border-radius: 0px;
+    background-color: lightskyblue;
+   padding: 0px;
+   margin: 10%;
+   border-radius: 10px;
    
 }
 
@@ -79,11 +112,73 @@ div {
 
 h2 {
     font-style: italic;
-    color: rgb(0, 217, 255);
+    color: lightslategray;
+    text-align: left;
+    padding-left: 100px;
 }   
  
 p {
     font-style: normal;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
     
 }
+.footer {
+  position: absolute;
+  left: 100%;
+  bottom: 50px;
+  width: 50%;
+  background-color: red;
+  color: white;
+  text-align: left;
+}
+/*Style the footer
+footer {
+  background-color: deeppink;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  color: rgb(27, 68, 68);
+  padding: 10px;
+}
+
+.red{
+  color: red !important;
+}
+/*
+footer{
+  background-color: f5f5f5;
+  padding: 80px 0;
+  .footer-widget{
+    h3{
+      margin-bottom: 30px;
+    }
+    */
+    
+  
+  .contact-link{
+    display:inline-block;
+    width: 50%;
+    color: #333;
+  }
+   /*footer social*/
+  .footer-social {
+    ul{
+      li{
+        list-style: none;
+        float: left;
+        padding: 10px 10px;
+        first-child {
+          padding-right: 0;
+        }
+        a{
+          font-size: 20px;
+          color: #333;
+        
+          
+        }
+      }
+    }
+  }
+  
+  
