--- a/styles.css
+++ b/styles.css
@@ -113,14 +113,14 @@ div {
 h2 {
     font-style: italic;
     color: lightslategray;
-    text-align: left;
+    text-align: center;
     padding-left: 100px;
 }   
  
 p {
     font-style: normal;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
+    text-align: center;
     
 }
 .footer {
