--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@ h3{
     color: #ffd700;
     font-style: italic;
 }
+/*
 body, html {
     height: 30%;
-
 }
+*/
 * {
     box-sizing: border-box;
 }
@@ -118,7 +119,7 @@ h2 {
 }   
  
 p {
-    font-style: normal;
+    font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     
